# mpeg2ts-reader

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  release.toml  testsrc.ts
.github/: dependabot.yml
.github/workflows/: audit.yml  benchmark.yml  pr-benchmark-upload-from-main.yml  pr-benchmark.yml  rust.yml
benches/: bench.rs  ci_bench.rs
examples/: dump-pcr.rs  dump.rs  simple.rs  strip.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_target_1/: 0.ts
fuzz/fuzz_targets/: fuzz_target_1.rs
scripts/: fuzz.sh
shootout/: Cargo.toml  report.py  report.sh
shootout/benches/: bench.rs
shootout/src/: ffmpeg_timestamps.rs  lib.rs  mpeg2ts_reader_timestamps.rs  mpeg2ts_timestamps.rs
src/: demultiplex.rs  descriptor.rs  lib.rs  mpegts_crc.rs  packet.rs  pes.rs  psi.rs  unpacketise.rs
src/descriptor/: avcvideo.rs  iso_639_language.rs  max_bitrate.rs  mod.rs  registration.rs
src/psi/: mod.rs  pat.rs  pmt.rs  tsdt.rs
