[package]
name = "mpeg2ts-reader"
version = "0.15.1-dev"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
description = "Parser for MPEG Transport Stream data"
repository = "https://github.com/dholroyd/mpeg2ts-reader"
license = "MIT/Apache-2.0"
categories = [ "multimedia::video", "parser-implementations" ]
keywords = [ "mpegts", "ISO-13818-1", "H-222-0" ]
readme = "README.md"
edition = "2021"

[dependencies]
fixedbitset = "0.4.0"
encoding = "0.2"
log = "0.4"
smptera-format-identifiers-rust = "0.4.0"

[dev-dependencies]
assert_matches = "1.5.0"
bitstream-io = "1.3"
criterion = "0.4.0"
hex-literal = "0.2.1"
hex-slice = "0.1.4"
env_logger = "0.10.0"

[[bench]]
name = "bench"
harness = false

[profile.bench]
# for profiling,
debug = true
